--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9001
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sanyambansal07@gmail.com
-spring.mail.password=qqirjfcpwbdoqmqq
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
